--- a/interfaces/gui/src/styles/layout.css
+++ b/interfaces/gui/src/styles/layout.css
@@ -7,6 +7,7 @@
 .app-shell {
   display: grid;
   grid-template-columns: 190px 420px 1fr;
+  grid-template-rows: minmax(0, 1fr);
   width: 100%;
   height: 100%;
 }
@@ -57,14 +58,16 @@
 
 .main-column {
   display: grid;
-  grid-template-rows: 1fr 240px;
+  grid-template-rows: minmax(0, 1fr) 240px;
   min-width: 0;
+  min-height: 0;
 }
 
 .right-column {
   display: grid;
-  grid-template-rows: 1fr;
+  grid-template-rows: minmax(0, 1fr);
   min-width: 0;
+  min-height: 0;
 }
 
 @keyframes app-loading-spin {
